# python-picnic-api

./: .env.example  .gitignore  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yaml
integration_tests/: test_client.py  test_helper.py  test_session.py
python_picnic_api/: __init__.py  client.py  config_handler.py  helper.py  session.py
python_picnic_api/config/: default.yaml
tests/: __init__.py  test_client.py  test_config_handler.py  test_session.py
